# bark

./: .gitignore  LICENSE  NOTICE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
pbark/: README.md  pyproject.toml
pbark/pbark/: __init__.py  __main__.py  bark.py  errors.py  lexer.py  options.py  print_style.py
pbark/pbark/cli/: dog_art.py  version.py
pbark/pbark/config/: _resources.py  config_loader.py  dog_topics.py  name_hints.py  trait_loader.py  variable_type.py
pbark/pbark/interpreter/: bark_value.py  comparators.py  dog.py  interpreter.py  loop_signal.py  print_styles.py  prop.py  stdin_reader.py
pbark/pbark/parser/: ast_node.py  parse_expression.py  parser.py
pbark/pbark/parser/assign/: assign_parser.py
pbark/pbark/parser/collection/: pile_action_parser.py  pile_parser.py  smart_ordinal_parser.py  stash_parser.py  stash_spots.py  take_parser.py
pbark/pbark/parser/controlflow/: foreach_parser.py  function_parser.py  if_parser.py  inline_body_parser.py  loop_control_parser.py  until_parser.py  while_parser.py
pbark/pbark/parser/expression/: comparison_op.py  condition_parser.py  value_parser.py
pbark/pbark/parser/input/: input_parser.py
pbark/pbark/parser/keywords/: __init__.py  attribute_keyword_groups.py  collection_keyword_groups.py  control_flow_keyword_groups.py  (+3 more)
pbark/pbark/resources/: breeds.txt  objects.txt  stashes.txt  traits.json
pbark/tests/: conftest.py  test_feature.py  test_golden.py  test_parser_register.py  test_parser_shape.py  test_parser_stash.py  test_parser_value.py  test_script_mode_parse.py
(+102 files in other folders)
