[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pbark"
version = "1.0.0"
description = "Python port of the jbark dog-themed story programming language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pbark = "pbark.bark:main"

[tool.setuptools.package-data]
pbark = ["resources/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pbark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
